# llm-zoomcamp

./: LICENSE  README.md  pyproject.toml
01_agentic_rag/: README.md  hw_01.ipynb  pyproject.toml  rag_helper.py
03_orchestration/: docker-compose.yml
03_orchestration/flows/: hw03.yaml  rag.yaml
04-evaluation/: 04-hw.ipynb
05-monitoring/: 05-hw.ipynb  pyproject.toml  starter.py
dlt_workshop/: main.py  pyproject.toml
llm-zoomcamp-onnx/: hw_02.ipynb  hw_02_1.ipynb
