[project]
name = "dlt-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "logfire>=4.37.0",
    "minsearch>=0.2.0",
    "openai>=2.43.0",
    "pydantic-ai>=2.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
